--- a/first dz.html
+++ b/first dz.html
@@ -9,18 +9,16 @@
    <tr>
     <td height="140px" width="145px" > <b> <h2> ITIS</td>
     <td width="200px">256</td>
-    <td width="145px" align="center" valign="top"> 
-      <input type="radio" value="false">  
+    <td width="190px" align="center" valign="top"> 
+      <input type="radio" value="true">  
       <br> 
       <input type="radio"> 
       <input type="radio"> 
       <br>
       <input type="radio"> 
       <input type="radio"> 
-      <input type="radio"> <br> <br>  
-      <input type="radio"> <input type="radio"> <br> <input type="radio"> 
-      <input type="radio"> <input type="radio"> <input type="radio"> <br> <input type="radio"><input type="radio"> <input type="radio"> <input type="radio"> <input type="radio">
-      <input type="radio">
+      <input type="radio"> <br> <br> <margin >
+      <input type="radio"> <input type="radio"> <br>  <input type="radio"> <input type="radio"> <input type="radio"> <input type="radio">  <br>  <input type="radio"> <input type="radio"> <input type="radio"> <input type="radio"> <input type="radio"> <input type="radio">
        </td>
     <td width="200px" > <br> <h5>query <br> <input size="15px"> <input type="button" value="На Яндекс">  </td>
    </tr>
@@ -54,7 +52,8 @@
    <tr>
     <td height="75px"> <b> <h6> ITIS</td>
     <td align="center"> WRITE <br> <br> <input size="19px"> <input type="button" value="to Mail"> </td>
-    <td>фото</td>
+    <td valign="top"> <input type="radio"> <br> <input type="radio">  <input type="radio"> <br> <input type="radio"> <input type="radio"> <input type="radio">
+     <br> <input type="radio"> <input type="radio"> <br> <input type="radio"> </td>
     <td> <b> <h5> ITIS</td>
    </tr>
    
