--- a/first dz.html
+++ b/first dz.html
@@ -9,18 +9,25 @@
    <tr>
     <td height="140px" width="145px" > <b> <h2> ITIS</td>
     <td width="200px">256</td>
-    <td width="190px" align="center" valign="top"> 
-      <input type="radio" value="true">  
-      <br> 
-      <input type="radio"> 
-      <input type="radio"> 
-      <br>
-      <input type="radio"> 
-      <input type="radio"> 
-      <input type="radio"> <br> <br> <margin >
-      <input type="radio"> <input type="radio"> <br>  <input type="radio"> <input type="radio"> <input type="radio"> <input type="radio">  <br>  <input type="radio"> <input type="radio"> <input type="radio"> <input type="radio"> <input type="radio"> <input type="radio">
-       </td>
-    <td width="200px" > <br> <h5>query <br> <input size="15px"> <input type="button" value="На Яндекс">  </td>
+    <td align="center"> 
+      <table align="center">
+        <tr align="center">
+          <td colspan="2"><input type="radio"></input>
+        <br><input type="radio"></input><input type="radio"></input>
+        <br><input type="radio"></input><input type="radio"></input><input type="radio"></input></td></td>
+      </tr>
+        <tr align="center">
+        <td>
+      <input type="radio"></input>
+        <br><input type="radio"></input><input type="radio"></input>
+        <br><input type="radio"></input><input type="radio"></input><input type="radio"></input></td> </td>
+        <td> <input type="radio"></input>
+        <br><input type="radio"></input><input type="radio"></input>
+        <br><input type="radio"></input><input type="radio"></input><input type="radio"></input></td> </td> </td>
+        </tr>
+      </table>
+      </td>
+    <td width="200px" > <br> <h5>query <br> <input size="15px"> <input type="button" value="На Яндекс"> </td>
    </tr>
    
    <tr> 
